<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="main_title">Grand Rounds</string>
    <string name="main_subtitle">Presentation Aid and Quiz App</string>
    <string name="main_presenting">Presenting</string>
    <string name="main_attending">Attending</string>

    <string name="sign_in_title">Please enter your name and email</string>
    <string name="sign_in_name">Name</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_submit">Continue</string>
    <string name="sign_in_privacy_policy">Privacy policy</string>
    <string name="alert_OK">Okay</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_body">We won\'t email you special offers because we have none. This is a teaching aid, not a shopping catalogue.</string>
    <string name="create_title">Enter a title for this presentation</string>
    <string name="create_submit">Continue</string>
    <string name="create_hint">Presentation Title</string>
    <string name="prepare_title">Enter a description and diagnosis for each case to be presented</string>
    <string name="prepare_case_desc">Case description (ie Female, 42, patellofemoral dislocation)</string>
    <string name="prepare_add_case">Add another case</string>
    <string name="prepare_complete">I\'m done</string>
    <string name="prepare_case_diagnosis">Diagnosis</string>

</resources>
