<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/leonardo_arms"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black80"/>


    <TextView
            android:id="@+id/create_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_title"
            android:gravity="center"
            android:layout_margin="30dp"
            android:textColor="@color/white"
            android:textSize="32dp"/>

    <EditText
            android:id="@+id/create_presentation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_title"
            android:gravity="center"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/create_hint"/>

    <Button
            android:id="@+id/create_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_below="@id/create_presentation_title"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/create_submit"/>

</RelativeLayout>
