<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/heart"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black80"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

        <TextView
                android:id="@+id/prepare_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prepare_title"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24dp"/>

        <ListView
                android:id="@+id/prepare_cases"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <!--<include layout="@layout/item_prepare"/>-->

        </ListView>

        <Button
                android:id="@+id/prepare_add_case"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/prepare_add_case"/>

        <Button
                android:id="@+id/prepare_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/prepare_complete"/>

    </LinearLayout>


</RelativeLayout>
